# inuits-policy-based-auth

./: .env.dist  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  run_tests.sh  setup.py
.github/: dependabot.yml
.github/workflows/: python-publish.yml
inuits_policy_based_auth/: __init__.py  base_policy.py  exceptions.py  inuits_policy_based_auth_exceptions.py  policy_factory.py  user_auth_data.py
inuits_policy_based_auth/authentication/: authenticator.py  base_authentication_policy.py  strategy.py  user_auth_data.py
inuits_policy_based_auth/authentication/policies/token_based_policies/: __init__.py  authlib_flask_oauth2_policy.py
inuits_policy_based_auth/authentication/strategies/token_strategy/: authlib_flask_oauth2_strategy.py
inuits_policy_based_auth/authorization/: base_authorization_policy.py  base_policy.py  context.py  policy_factory.py
inuits_policy_based_auth/authorization/policies/: __init__.py  open_data_policy.py  super_admin_policy.py
inuits_policy_based_auth/contexts/: policy_context.py  request_context.py  user_context.py
inuits_policy_based_auth/helpers/: immutable_dict.py
src/inuits_policy_based_auth/: __init__.py  exceptions.py  policy_factory.py
src/inuits_policy_based_auth/authentication/: base_authentication_policy.py
src/inuits_policy_based_auth/authentication/policies/: default_tenant_policy.py
src/inuits_policy_based_auth/authentication/policies/token_based_policies/: authlib_flask_oauth2_policy.py  default_tenant_policy.py  tenant_token_roles_policy.py
src/inuits_policy_based_auth/authorization/: base_authorization_policy.py
src/inuits_policy_based_auth/authorization/policies/: open_data_policy.py  scope_based_policy.py  super_admin_policy.py
src/inuits_policy_based_auth/contexts/: __init__.py  policy_context.py  request_context.py  user_context.py
src/inuits_policy_based_auth/helpers/: access_restrictions.py  tenant.py
src/tests/integration/: flask_process.py  helpers.py  test_policy_factory.py
src/tests/integration/authentication/: test_authlib_flask_oauth2_policy.py  test_default_tenant_policy.py  test_tenant_token_roles_policy.py
src/tests/integration/authorization/: test_open_data_policy.py  test_scope_based_policy.py  test_super_admin_policy.py
src/tests/integration/test_api/: app.py  configuration.json  global_policy_factory.py  policy_loader.py  scopes.json  token_schema.json
src/tests/unit/: test_policy_factory.py
src/tests/unit/authentication/: test_base_authentication_policy.py
src/tests/unit/authorization/: test_base_authorization_policy.py
src/tests/unit/authorization/policies/: test_open_data_policy.py  test_scope_based_policy.py  test_super_admin_policy.py
src/tests/unit/helpers/: test_immutable_dict.py
tests/integration/: custom_token.py  flask_process.py  test_authentication_policies.py  test_integration.py  test_policy_factory.py
tests/integration/authentication/: test_authlib_flask_oauth2_policy.py
tests/integration/authorization/: test_open_data_policy.py  test_scope_based_policy.py  test_super_admin_policy.py
tests/integration/test_api/: app.py  configuration.json  policy_loader.py  scopes.json
tests/unit/: test_policy_factory.py
tests/unit/authorization/policies/: dummies.py  test_open_data_policy.py  test_scope_based_policy.py
tests/unit_tests/: test_policy_factory.py
tests/unit_tests/authentication/: test_base_authentication_policy.py
tests/unit_tests/authorization/: test_base_authorization_policy.py
tests/unit_tests/authorization/policies/: test_open_data_policy.py  test_super_admin_policy.py
