# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inuits_policy_based_auth"
version = "9.6.0"
description = "Module for securing API endpoints based on policies."
readme = "README.md"
authors = [{ name = "Inuits", email = "developers@inuits.eu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["inuits", "policy", "auth"]
dependencies = [
    "Authlib>=1.2.1",
    "requests>=2.31",
    "Werkzeug>=2",
]

[project.optional-dependencies]
dev = [
    "coverage>=7",
    "Flask-RESTful>=0.3.10",
    "Flask>=3",
    "pyjwt>=2.8",
    "pytest>=7",
    "python-dotenv>=1",
]

[project.urls]
Homepage = "https://github.com/inuits/inuits-policy-based-auth"
